# ttb-label-verification

./: .env.example  .gitignore  Phase_0_plan.md  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
Docs/: Plan.md  Progress_Report.md
app/: main.py
app/api/: models.py  verify.py
app/static/: app.js  index.html  styles.css
app/verification/: comparisons.py  models.py
app/vision/: client.py  fakes.py  preprocessing.py  service.py
scripts/: readiness_check.py  run_sample_extraction.py
tests/: test_health.py  test_verification_comparisons.py  test_verify_endpoint.py  test_verify_http.py  test_vision_service.py
tests/frontend/: label-ui.spec.js
