[project]
name = "fedstack-opener"
version = "0.1.0"
description = "TTB label verification proof-of-concept"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "openai>=2.43.0",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
